--- a/public/papermod-features/index.html
+++ b/public/papermod-features/index.html
@@ -1,2 +1,2 @@
-<!doctype html><html lang=en><head><title>http://localhost:1313/posts/blog/blog-template/</title>
-<link rel=canonical href=http://localhost:1313/posts/blog/blog-template/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=http://localhost:1313/posts/blog/blog-template/"></head></html>
+<!doctype html><html lang=en><head><title>https://zouzhuozhang.github.io/posts/blog/blog-template/</title>
+<link rel=canonical href=https://zouzhuozhang.github.io/posts/blog/blog-template/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://zouzhuozhang.github.io/posts/blog/blog-template/"></head></html>
