--- a/public/start-blog/index.html
+++ b/public/start-blog/index.html
@@ -1,2 +1,2 @@
-<!doctype html><html lang=en><head><title>https://zouzhuozhang.github.io:1313/posts/blog/start-blog/</title>
-<link rel=canonical href=https://zouzhuozhang.github.io:1313/posts/blog/start-blog/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://zouzhuozhang.github.io:1313/posts/blog/start-blog/"></head></html>
+<!doctype html><html lang=en><head><title>https://zouzhuozhang.github.io/posts/blog/start-blog/</title>
+<link rel=canonical href=https://zouzhuozhang.github.io/posts/blog/start-blog/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://zouzhuozhang.github.io/posts/blog/start-blog/"></head></html>
